--- a/.github/workflows/main_chatbotflyme.yml
+++ b/.github/workflows/main_chatbotflyme.yml
@@ -40,6 +40,14 @@ jobs:
             . 
             !venv/
 
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Run tests
+      run: |
+        pytest
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
