--- a/.github/workflows/main_chatbotflyme.yml
+++ b/.github/workflows/main_chatbotflyme.yml
@@ -46,7 +46,7 @@ jobs:
     steps:
     - name: Run tests
       run: |
-        pytest
+        python -m pytest
 
   deploy:
     runs-on: ubuntu-latest
