--- a/.github/workflows/main_chatbotflyme.yml
+++ b/.github/workflows/main_chatbotflyme.yml
@@ -40,14 +40,14 @@ jobs:
             . 
             !venv/
 
-# test:
-#   runs-on: ubuntu-latest
-#   needs: build
-#   steps:
-#   - name: Run tests
-#     run: |
-#       pip install pytest
-#       pytest --rootdir=. test/test_main.py 
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Run tests
+      run: |
+        pip install pytest
+        pytest
 
   deploy:
     runs-on: ubuntu-latest
