--- a/.github/workflows/main_chatbotflyme.yml
+++ b/.github/workflows/main_chatbotflyme.yml
@@ -42,14 +42,22 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: build
+    
     steps:
-    - name: Run tests
-      working-directory: ./tests
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    - name: Install dependencies
       run: |
-        pip install pytest
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Run tests
+      run: |
         pytest
 
+        
   deploy:
     runs-on: ubuntu-latest
     needs: build
