--- a/.github/workflows/main_chatbotflyme.yml
+++ b/.github/workflows/main_chatbotflyme.yml
@@ -42,22 +42,14 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    
+    needs: build
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
     - name: Run tests
+      working-directory: ./tests
       run: |
+        pip install pytest
         pytest
 
-        
   deploy:
     runs-on: ubuntu-latest
     needs: build
